--- a/client/ui/ticket/ticket.html
+++ b/client/ui/ticket/ticket.html
@@ -50,7 +50,7 @@
 <!-- TICKET_CREATE_FORM -->
 <template name="ticket_create_form">
 	<article class="card my-2">
-		<h5 class="card-header">Création d'un ticket</h5>
+		<h5 class="card-header">Cration d'un ticket</h5>
 		
 		<div class="card-body">
 		
