--- a/client/ui/navbar/navbar.html
+++ b/client/ui/navbar/navbar.html
@@ -19,9 +19,9 @@
 			
 			{{#unless logginIn}}
 			{{#if currentUser}}
-			<li class="col"><button class="btn btn-outline-secondary logout-js">Déconnexion</button></li>
+			<li class="col"><button class="btn btn-outline-secondary logout-js p-2">Déconnexion</button></li>
 			{{else}}
-			<li class="col"><button class="btn btn-success login-button js-open-login-modal">Connexion</button></li>
+			<li class="col"><button class="btn btn-success login-button js-open-login-modal p-2">Connexion</button></li>
 			{{/if}}
 			{{/unless}}
 			
