--- a/client/ui/profil/profil.html
+++ b/client/ui/profil/profil.html
@@ -15,7 +15,9 @@
 			<p class="scoreProfil itemProfil">Score : {{profilInfos.score}}</p>
 			
 			{{#if currentUserProfil}}
-				<a href="/mycontributions" class="btn btn-primary btn-sm btn-style py-2 px-4">Afficher mes contributions</a>
+				<a href="/mycontributions" class="btn btn-primary btn-sm btn-block btn-style py-2 px-4 mb-2">Afficher mes contributions</a>
+			
+				<a href="/" class="btn btn-outline-danger btn-sm btn-block btn-style py-2 px-4 logout-js">Se déconnecter</a>
 			{{/if}}
 			
 		</div>
