--- a/client/ui/faq/faq.html
+++ b/client/ui/faq/faq.html
@@ -1,4 +1,38 @@
 <template name="faq">
 
-YOOOO
+	<h2 class="mb-4"><i class="fa fa-question mr-3" aria-hidden="true"></i>Foire aux questions</h2>
+	
+	
+	<div>
+	
+		Qu'est-ce qu'un correcteur collaboratif ?
+		
+		Il s'agit d'un site de collaboration participatif où les utilisateurs auront la possibilité de partager du texte pour qu’il puisse être examiné et corrigé par d’autres utilisateurs du site.
+		
+		
+		
+		Qui peut intervenir sur mon ticket ?
+		
+		Si le ticket est public, tous les utilisateurs du site auront la possibilité de voir le ticket et de proposer des corrections.
+		Si le ticket est privé, alors seuls les modérateurs du site auront la possibilité de voir le ticket et de proposer des corrections.
+		
+		Dans les deux cas, seuls vous et les modérateurs ont la possibilité d'accepter ou de refuser une correction sur votre ticket.
+		
+
+		
+		
+		A quoi sert le score et comment augmente-t-il ?
+		
+		Le score augmente à chaque fois qu'une correction que vous avez proposé est acceptée.
+		
+		Il permet de débloquer des paliers de niveau et des rangs.
+		Le rang de modérateur est atteignable par palier de niveau.
+		
+		
+		
+		
+	
+	</div>
+	
+	
 </template>
