--- a/client/ui/home/home.html
+++ b/client/ui/home/home.html
@@ -9,12 +9,12 @@
 	{{/if}}
 	
 	<main class="row mt-4">
-		<div class="col-7">
-			<p class="text-muted mb-4 title-home">Derniers tickets publics</p>
+		<div class="col-md-7 col-sm-12 mb-5">
+			<p class="text-muted mb-4 title-home">Derniers tickets</p>
 			{{> ticket_list}}
 		</div>
 		
-		<div class="col-5">
+		<div class="col-md-5 col-sm-12">
 			<p class="text-muted mb-4 title-home">Classement des utilisateurs</p>
 			{{> ladder}}
 		</div>
